styling: fix todos overlapping, top vertical align checkboxs and delete button

--- a/src/styles/Todos.css
+++ b/src/styles/Todos.css
@@ -22,7 +22,7 @@
 .todos-container ul > .todo-item {
   display: grid;
   grid-template-columns: 90% 10%;
-  height: 2em;
+  margin: 1em 0;
 }
 
 .todos-container .todo-item > .completed {
@@ -31,12 +31,12 @@
 
 .todos-container .todo-item > .todo-content {
   display: flex;
-  align-items: center;
   width: 100%;
 }
 
 .todos-container .todo-item > .btn_remove {
   display: none;
+  align-self: start;
 }
 
 .todos-container .todo-item:hover > .btn_remove {
